# cpp-playground

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: AddToyProject.cmake
projects/1_hello_world/: CMakeLists.txt  hello_world.cpp
projects/1_hello_world/benchmarks/: hello_world_bench.cpp
projects/1_hello_world/include/hello_world/: hello_world.hpp
projects/1_hello_world/src/: hello_world.cpp
projects/1_hello_world/tests/: hello_world_test.cpp
projects/2_my_uniq_ptr/: CMakeLists.txt  deleter_storage.hpp  my_uniq_ptr.cpp  my_uniq_ptr.hpp
projects/2_my_uniq_ptr/benchmarks/: my_uniq_ptr_bench.cpp
projects/2_my_uniq_ptr/tests/: my_uniq_ptr_test.cpp
projects/3_event_loop/: CMakeLists.txt  event_loop.cpp  event_loop.hpp
projects/3_event_loop/benchmarks/: event_loop_bench.cpp
projects/3_event_loop/tests/: event_loop_test.cpp
scripts/: add_toy_project.sh
